--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
       <div>
         <h1>게임 셀렉터</h1>
-        <p class="note">wwhambug/site-game 리포지토리의 폴더를 자동으로 인식합니다.</p>
+        <p class="note">사용 가능한게임을 자동으로 인식합니다.</p>
       </div>
       <div class="small" id="status">로딩 중…</div>
     </header>
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-      각 게임 폴더에 <code>index.html</code>을 넣으면 카드 클릭 시 바로 실행됩니다.
+      클릭시 바로 실행됩니다..
     </footer>
   </div>
 
