index.html 업데이트

--- a/lemon-slicer/index.html
+++ b/lemon-slicer/index.html
@@ -122,4 +122,75 @@ function step(){
   tick++;
   if(spawnT--<=0){spawnT=Math.max(18,70-Math.floor(score/40));spawnFruit();}
   // 과일
-  for(let i=fruits.length-1;i>=
+  for(let i=fruits.length-1;i>=0;i--){
+    const f=fruits[i];
+    f.vy+=gravity;f.x+=f.vx;f.y+=f.vy;f.angle+=f.rot;
+    if(f.y-f.r>H+30&&!f.sliced){fruits.splice(i,1);lives--;if(lives<=0)end();}
+    if(f.sliced&&f.y>H+60)fruits.splice(i,1);
+  }
+  // 파티클
+  for(let i=particles.length-1;i>=0;i--){
+    const p=particles[i];
+    p.vy+=0.12;p.x+=p.vx;p.y+=p.vy;p.age++;
+    if(p.age>p.life)particles.splice(i,1);
+  }
+  draw();
+  requestAnimationFrame(step);
+}
+
+// ===== 그리기 =====
+function draw(){
+  ctx.clearRect(0,0,W,H);
+  // 레몬
+  for(const f of fruits){
+    ctx.save();ctx.translate(f.x,f.y);ctx.rotate(f.angle);
+    // 외피
+    ctx.beginPath();ctx.arc(0,0,f.r,0,6.28);
+    ctx.fillStyle='#fce12d';ctx.fill();
+    // 속살
+    ctx.beginPath();ctx.arc(0,0,f.r*0.82,0,6.28);
+    ctx.fillStyle='#fff17a';ctx.fill();
+    // 조각무늬
+    ctx.strokeStyle='#fff59d';ctx.lineWidth=2;
+    for(let i=0;i<8;i++){
+      ctx.beginPath();
+      ctx.moveTo(0,0);
+      ctx.lineTo(Math.cos(i*0.785)*f.r*0.8,Math.sin(i*0.785)*f.r*0.8);
+      ctx.stroke();
+    }
+    ctx.restore();
+  }
+  // 파티클
+  for(const p of particles){
+    ctx.globalAlpha=1-p.age/p.life;
+    ctx.fillStyle=p.color;
+    ctx.beginPath();ctx.arc(p.x,p.y,p.size,0,6.28);ctx.fill();
+  }
+  ctx.globalAlpha=1;
+  // 슬라이스 궤적
+  if(pointer.pts.length>1){
+    const pts=pointer.pts.slice(-10);
+    ctx.lineJoin=ctx.lineCap='round';
+    ctx.lineWidth=14;ctx.strokeStyle='rgba(255,255,255,0.8)';
+    ctx.beginPath();ctx.moveTo(pts[0].x,pts[0].y);
+    for(let i=1;i<pts.length;i++)ctx.lineTo(pts[i].x,pts[i].y);
+    ctx.stroke();
+    ctx.lineWidth=8;ctx.strokeStyle='rgba(255,230,0,0.9)';
+    ctx.stroke();
+  }
+  document.getElementById('scoreHUD').textContent=`점수: ${score} · 최고: ${high} · 목숨: ${lives}`;
+}
+
+// ===== 상태 제어 =====
+function start(){score=0;lives=3;fruits=[];particles=[];running=true;paused=false;spawnT=10;document.getElementById('startPanel').classList.add('hidden');document.getElementById('gameOverPanel').classList.add('hidden');requestAnimationFrame(step);}
+function end(){running=false;document.getElementById('finalScore').textContent=`점수: ${score}`;document.getElementById('gameOverPanel').classList.remove('hidden');}
+
+// ===== 버튼 =====
+startBtn.onclick=()=>start();
+playAgainBtn.onclick=()=>start();
+pauseBtn.onclick=()=>{if(!running)return;paused=!paused;pauseBtn.textContent=paused?'계속':'일시정지';if(!paused)requestAnimationFrame(step);};
+restartBtn.onclick=()=>start();
+window.addEventListener('keydown',e=>{if(e.code==='Space'&&running){paused=!paused;pauseBtn.textContent=paused?'계속':'일시정지';if(!paused)requestAnimationFrame(step);}});
+</script>
+</body>
+</html>
